# fdm_wave

./: Cargo.toml  README.md
benches/: bench.rs
examples/: simple.rs
src/: lib.rs  simd_utils.rs
src/vector/: mod.rs
