[package]
authors = ["Norbert Pozar <bertapozar@gmail.com>"]
name = "fdm_wave"
version = "0.1.0"
license = "MIT"

[dependencies]
ndarray = "0.6"
rayon = { version = "0.4.0", optional = true }
simd = { version = "0.1.1", optional = true }

[dev-dependencies]
ndarray-rand = "0.2.0"
rand = "0.3.14"

[features]
default-features = []

